# caplug-rs

./: Cargo.toml  LICENSE.md
cahal/: Cargo.toml
cahal/src/: audio_object.rs  lib.rs  macros.rs  plugin_driver_interface.rs  property.rs  raw_plugin_driver_interface.rs
caplug/: Cargo.toml
caplug/.cargo/: config.toml
caplug/build_driver/: Cargo.toml
caplug/build_driver/src/: main.rs
caplug/plugin/: Cargo.toml
caplug/plugin/src/: lib.rs
caplug/src/: lib.rs
