[package]
name = "cahal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core-foundation = { version = "0.9.4", features = ["with-uuid"] }
coreaudio-sys = { version = "0.2.15", features = ["core_audio"] }
log = "0.4.21"
once_cell = "1.19.0"
oslog = "0.2.0"
polonius-the-crab = "0.4.1"
strum = { version = "0.26.2", features = ["derive"] }
