[package]
name = "build_driver"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "build_driver"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
toml = "0.8.12"
uuid = { version = "1.8.0", features = ["v3"] }
